# featurize-ragflow

./: README.md  pyproject.toml
apphub/: ragflow.py
